Create production docker

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,8 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Orcestra Gamificação",
+  "name": "Orcestra Gamificação",
+  "description": "Site oficial da Orcestra Gamificação",
+  "lang": "pt-BR",
   "icons": [
     {
       "src": "favicon.ico",
@@ -10,6 +12,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#36512c",
   "background_color": "#ffffff"
 }
